# contextdna-ide

./: .env.example  .gitignore  .gitmodules  .gitmodules.template  ARCHITECTURE.md  BOOTSTRAP.md  LICENSE  NOTICE  README.md  SUBMODULES_STATUS.md  docker-compose.heavy.yml  docker-compose.lite.yml  flake.nix  pyproject.toml  sanitize-report.txt
.github/workflows/: bootstrap-verify.yml  build-installers.yml.frozen-2026-05-13  ci.yml.frozen-2026-05-13  docs.yml  gains-gate.yml  lint.yml.frozen-2026-05-13  release.yml  roadmap-orphans-weekly.yml  roadmap-project-sync.yml  vibe-coder-install-test.yml.frozen-2026-05-13  zsf-bare-except.yml
configs/: anticipation-engine.yaml  observability-store.yaml  synaptic-voice.yaml
contextdna/fleet/: __init__.py  chief_ingest.py  chief_synthesis.py  (+1 more)
docs/: gap-analysis-race-2026-05-13.md  operational-invariance.md
engine/: README.md
engine/core/: README.md  pyproject.toml  setup.sh
engine/core/clients/electron/: main.js  package.json  preload.js
engine/core/clients/electron/renderer/: error.html
engine/core/clients/raycast/: package.json
engine/core/clients/raycast/src/: api.ts  consult.tsx  recent.tsx  record-fix.tsx  record-win.tsx  search.tsx  stats.tsx
engine/core/clients/vscode/: package.json  tsconfig.json
engine/core/clients/vscode/src/: extension.ts  surgeonTools.ts
engine/core/clients/xbar/: context-dna.1m.py
engine/core/src/context_dna/: __init__.py  adapters.py  architecture_enhancer.py  brain.py  brain_state.md  bugfix_sop_enhancer.py  doctor.py  enhanced_success_detector.py  exceptions.py  hook_evolution.py  intelligent_success.py  llm_success_analyzer.py  objective_success.py  pattern_evolution.py  pattern_manager.py  process_sop_enhancer.py  professor.py  sop_types.py  temporal_validator.py  upgrade.py  win_audit.py  work_log.py
engine/core/src/context_dna/cli/: main.py
engine/core/src/context_dna/extraction/: sop_extractor.py
engine/core/src/context_dna/hooks/: claude.py  installer.py
engine/core/src/context_dna/llm/: anthropic_provider.py  manager.py  ollama_provider.py  providers.py
engine/core/src/context_dna/security/: __init__.py
engine/core/src/context_dna/server/: __init__.py  api.py  middleware.py
engine/core/src/context_dna/setup/: __init__.py  checker.py  wizard.py
engine/core/src/context_dna/storage/: backend.py  sqlite.py
infra/: CLAUDE.md
mcp-servers/: Dockerfile.mcp  contextdna_engine_mcp.py  contextdna_webhook_mcp.py  mcp-server-daemon.py  mcp-startup-wrapper.sh  projectdna_mcp.py  synaptic_mcp.py
memory/: .work_dialogue_log.jsonl  CLAUDE.md  Dockerfile.agent  REASONING_ALIGNMENT_AUDIT.md  REMEDIATION_IMPLEMENTATION.md  SECTION7_TIMEOUT_IMPLEMENTATION.md  SOP_WEBHOOK_INJECTION_ARCHITECTURE.md  __init__.py  ab_autonomous.py  acontext_helper.py  activate_ab_testing.py  agent_query.py  agent_review_bridge.py  agent_routes.py  agent_service.py  agent_watchdog.py  anticipation_engine.py  anticipatory_butler.py  architecture.py  architecture_enhancer.py  architecture_twin.py  artifact_store.py  async_context_loader.py  atlas_journal.py  auto_architecture.py  auto_capture.py  auto_context.py  auto_enhance.py  auto_learn.py  auto_reviewer.py  bash_hook.py  boundary_feedback.py  boundary_intelligence.py  brain.py  bugfix_sop_enhancer.py  bugfix_tracker.py  butler_context_summary.py  butler_db_repair.py  butler_deep_query.py  butler_reasoning_chain.py  (+253 more)
nats/: leaf.conf  leaf.creds
nix/: README.md  darwin-configuration.nix  home-manager.nix
profiles/: README.md  extensible.yaml  heavy.yaml  lite.yaml
reports/: bootstrap-verify-2026-05-13.json
schema/: storage-union.sql
schemas/: panel-manifest-v1.0.0.schema.json
scripts/: .action-registry-cache.json  .gitmodules.lock.example  .zsf-bare-except-allowlist.txt  3s-answer-brainstorm.py  3s-brainstorm.sh  3s-network.conf.example  3s-network.local.conf  3s-network.sh  aaron-actions-unblock.sh  action-registry.sh  activate-channel-scoring.sh  activate-full-remote.sh  append-arbiter-verdict.py  append-evidence-ledger.py  ask-synaptic.sh  assume-admin.sh  atlas-ops.sh  audit-llm-provider-coverage.sh  auto-capture-results-cursor.sh  auto-capture-results.sh  auto-memory-query-concise.sh  auto-memory-query-cursor.sh  auto-memory-query.sh  auto-session-summary.sh  auto-setup-customer-integration.py  backup-context-dna.sh  bootstrap-from-scratch.sh  bootstrap-verify.sh  brain-secret.sh  bridge-load-test.py  butler-watchdog.sh  cardio-gate.sh  case_dedup.py  categorize-stashes.sh  channel-smoketest.py  check-mf-extraction-contract.sh  check-surgeons.sh  check-zsf-bare-except.sh  cleanup-stale-worktrees.sh  cleanup-zombie-jetstream-consumers.py  (+230 more)
tests/: test_cli.py
tools/: cloud_inbox_listener.py  fleet_capability_publish.py  fleet_historian_nats.py  fleet_idle_watcher.py  fleet_jetstream_provision.py  fleet_nerve_cloud.py  fleet_nerve_config.py  fleet_nerve_dashboard.py  fleet_nerve_discovery.py  fleet_nerve_mcp.py  fleet_nerve_menubar.py  fleet_nerve_nats.py  fleet_nerve_sanitize.py  fleet_nerve_security.py  fleet_nerve_send.py  fleet_nerve_store.py  fleet_nerve_visual.py  fleet_ops.py  fleet_race_publisher.py  fleet_remote_worker.py  fleet_repair_guard.py  launch-llm-proxy.sh  llm_priority_proxy.py  multifleet_coordinator.py  multifleet_diff_summarizer.py  multifleet_mcp_legacy.py  multifleet_packet_store.py  peer_assist_directed.py  test_trialbench_batch.py  test_trialbench_blinder.py  test_trialbench_packet.py  test_trialbench_score.py  trialbench.py  trialbench_batch.py  trialbench_blinder.py  trialbench_packet.py  trialbench_score.py  webhook_health_bridge.py
(+403 files in other folders)
