[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "context-dna-ide"
version = "0.1.0"
description = "ContextDNA IDE — AI subconscious mind for persistent context memory."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Aaron Tjomsland", email = "your@email.com" },
]
keywords = [
    "ai",
    "context",
    "memory",
    "claude-code",
    "mcp",
    "llm",
    "evidence-based",
    "fleet",
    "nats",
    "mothership",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Minimum runtime dependencies — what every mothership install needs.
# LLM provider SDKs are intentionally optional (see [project.optional-dependencies]).
dependencies = [
    "pydantic>=2",
    "httpx>=0.27",
    "nats-py>=2.6",
    "redis>=5.0",
    "sqlalchemy>=2.0",
    "click>=8.1",
    "rich>=13.0",
]

[project.optional-dependencies]
# Contributor / CI tooling.
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "black>=24.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
# Apple Silicon native inference (lite-mode default subconscious).
mlx = [
    "mlx-lm>=0.10",
]
# OpenAI-compatible powerhouse calls.
openai = [
    "openai>=1.0",
]
# Anthropic powerhouse calls (Claude).
anthropic = [
    "anthropic>=0.30",
]
# Local Ollama runtime for Linux / non-MLX hosts.
local = [
    "ollama>=0.2",
]
# Convenience: install everything.
all = [
    "context-dna-ide[dev,mlx,openai,anthropic,local]",
]

[project.urls]
Homepage = "https://github.com/supportersimulator/contextdna-ide"
Documentation = "https://github.com/supportersimulator/contextdna-ide#readme"
Repository = "https://github.com/supportersimulator/contextdna-ide"
Issues = "https://github.com/supportersimulator/contextdna-ide/issues"

[project.scripts]
context-dna-ide = "context_dna_ide.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/context_dna_ide"]

[tool.hatch.build.targets.sdist]
include = [
    "src/context_dna_ide",
    "README.md",
    "LICENSE",
    "NOTICE",
    "pyproject.toml",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "ASYNC"]
ignore = ["E501"]  # line length handled by black

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
