[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "context-dna"
version = "0.1.0"
description = "Autonomous learning system for developers - captures wins, fixes, and patterns automatically"
readme = "README.md"
license = {text = "MIT"}
license-files = ["LICENSE", "NOTICE"]
authors = [
    {name = "Aaron Tjomsland", email = "aaron@ersimulator.com"}
]
keywords = ["memory", "learning", "ai", "developer-tools", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28.0",  # HTTP client for LLM APIs
    "pyyaml>=6.0",       # YAML config parsing
    "rich>=13.0.0",      # Beautiful terminal output
]

[project.optional-dependencies]
# Full installation with PostgreSQL support
full = [
    "psycopg2-binary>=2.9.0",  # PostgreSQL driver
    "redis>=4.0.0",            # Redis client
    "boto3>=1.26.0",           # S3 client for SeaweedFS
]
# Local LLM support (Ollama management)
local = [
    "requests>=2.28.0",
]
# DeepSeek primary external LLM (httpx-native, no openai SDK needed)
deepseek = [
    "httpx>=0.24.0",
]
# OpenAI optional fallback (cutover 2026-04-18). Install only if you want
# direct OpenAI access or the openai-SDK-based DeepSeek provider variant.
openai = [
    "openai>=1.12.0",
]
# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
# All dependencies
all = [
    "context-dna[full,local,deepseek,openai,dev]",
]

[project.scripts]
context-dna = "context_dna.cli.main:main"

[project.urls]
Homepage = "https://github.com/context-dna/context-dna"
Documentation = "https://context-dna.dev/docs"
Repository = "https://github.com/context-dna/context-dna"
Issues = "https://github.com/context-dna/context-dna/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
